--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,8 +6,8 @@
   --header-height: 3rem;
 
   /*========== Colors ==========*/
-  --first-color: rgb(71, 59, 5);
-  --first-color-alt: #048654;
+  --first-color: rgb(77, 77, 77);
+  --first-color-alt: #8d8b1c;
   --title-color: #393939;
   --text-color: #5f5f5f;
   --text-color-light: #5f5f5f;
@@ -66,7 +66,7 @@ html{
 body.dark-theme{
   --title-color: #F1F3F2;
   --text-color: #C7D1CC;
-  --body-color: #1D2521;
+  --body-color: #000000;
   --container-color: #27302C;
 }
 
