--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -226,7 +226,7 @@ img{
   justify-content: center;
   align-items: center;
   padding: .3rem;
-  background: rgba(6,156,84,.5);
+  background: rgba(108, 109, 109, 0.5);
   border-radius: .4rem;
   z-index: var(--z-tooltip);
   transition: .4s;
@@ -669,4 +669,20 @@ img{
   border-radius: 0.5rem;
   width: 100%;
   max-width: 300px;
+}
+
+.mensaje-error {
+  color: white;
+  background-color: #d9534f;
+  padding: 12px;
+  margin-top: 15px;
+  border-radius: 8px;
+  text-align: center;
+  font-weight: bold;
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-10px); }
+  to { opacity: 1; transform: translateY(0); }
 }
